examples/test/testpolicy7607.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7607
  namespace: namespace257
spec:
  podSelector:
    matchLabels:
      key17: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value24
          key18: value2
      podSelector:
        matchLabels:
          key14: value8
          key24: value24
